api call updated

--- a/sample.env
+++ b/sample.env
@@ -1,4 +1,4 @@
-# Weather API Configuration
+# Sample Weather API  Configuration
 WEATHER_API_KEY=your_openweathermap_api_key
 API_BASE_URL=https://api.openweathermap.org/data/2.5
 LOCATION_LAT=number     
