--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,13 @@
 {
   "compilerOptions": {
-    "outDir": "./dist",
-    "target": "es6",
-    "module": "es6",
+    "target": "ES6",
+    "module": "ES6",
     "moduleResolution": "node",
+    "lib": ["ES6", "DOM"],
+    "outDir": "./dist",
     "strict": true,
     "esModuleInterop": true
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules"]
 }
