--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "start": "npm run build && node server.js",
     "dev": "ts-node-dev --respawn src/index.ts",
-    "build": "tsc"
+    "build": "tsc",
+    "vercel-build": "npm run build && npm install --omit=dev && echo 'Building for Vercel complete'"
   },
   "keywords": [],
   "author": "Tyrone Martin",
